[package]
name = "nxpch"
version = "0.1.0"
edition = "2024"

[dependencies]
capstone = { version = "0.14.0", default-features = false, features = ["std", "full", "arch_arm64"] }
clap = { version = "4.5.60", features = ["derive"] }
clap-stdin = "0.8.1"
ere = "0.2.4"
itertools = "0.14.0"
json5 = "1.3.1"
json5_nodes = "2.0.2"
keystone = { git = "https://github.com/Gaming32/keystone", version = "0.9.2", default-features = false, features = ["build_keystone_cmake", "arch_arm64"] }
miette = { version = "7.6.0", features = ["derive", "fancy", "serde"] }
parse_int = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.17.0"
smallvec = "1.15.1"
strsim = "0.11.1"
subslice-offset = "0.1.1"
thiserror = "2.0.18"

[dev-dependencies]
pretty_assertions = "1.4.1"
