[package]
name = "nxpch"
version = "0.1.0"
edition = "2024"

[dependencies]
capstone = { version = "0.14.0", default-features = false, features = ["std", "full", "arch_arm64"] }
clap = { version = "4.6.1", features = ["derive"] }
clap-stdin = "0.8.1"
ere = "0.2.4"
indexmap = "2.14.0"
itertools = "0.14.0"
json5 = "1.3.1"
json5_nodes = "2.0.2"
keystone = { git = "https://github.com/Gaming32/keystone", version = "0.9.2", default-features = false, features = ["build_keystone_cmake", "arch_arm64"] }
logos = "0.16.1"
miette = { version = "7.6.0", features = ["derive", "fancy", "serde"] }
num-traits = "0.2.19"
ordered-float = "5.3.0"
parse_int = "0.9.0"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_with = "3.18.0"
smallvec = "1.15.1"
strsim = "0.11.1"
strum = { version = "0.28.0", features = ["derive"] }
subslice-offset = "0.1.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
zip = { version = "8.6.0", default-features = false, features = ["deflate", "time"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
str-block = "0.1.2"
